@@ -1,5 +1,7 @@
 2014-06-09  Carl Hetherington  <cth@carlh.net>
 
+	* Make audio gain a floating-point value in the UI (#367).
+
 	* Work-around out-of-memory crashes with large start trims (#252).
 
 	* Version 1.69.24 released.
